fix name alignemnt

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -114,11 +114,12 @@
   @include breakpoint($large) {
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 4px;
   }
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-size: 21px;
 }
 
 .author__bio {
@@ -127,6 +128,7 @@
   @include breakpoint($large) {
     margin-top: 10px;
     margin-bottom: 20px;
+    margin-left: 4px;
   }
 }
 
